# sibe

./: .gitmodules  LICENSE  README.md  log  sibe.cabal  stack.yaml
.stack-work/install/x86_64-osx/lts-6.7/7.10.3/flag-cache/: MonadRandom-0.4.2.3-25cca215f1c89f8360b39f13846fde8e  hmatrix-0.18.0.0-1d8fa7590dc64d386197097d7b3b924f  split-0.2.3.1-6d0063c12972868a1e069995047d6884  storable-complex-0.2.2-5d724e6255914e391bee90b30a4cef13
.stack-work/install/x86_64-osx/lts-6.7/7.10.3/lib/x86_64-osx-ghc-7.10.3/hmatrix-0.18.0.0-7PZ22o8olec0bnj98RI2Zu/Internal/: Algorithms.dyn_hi  Algorithms.hi  CG.dyn_hi  CG.hi  Chain.dyn_hi  Chain.hi  Container.dyn_hi  Container.hi  Conversion.dyn_hi  Conversion.hi  Convolution.dyn_hi  Convolution.hi  Devel.dyn_hi  Devel.hi  Element.dyn_hi  Element.hi  Foreign.dyn_hi  Foreign.hi  IO.dyn_hi  IO.hi  LAPACK.dyn_hi  LAPACK.hi  Matrix.dyn_hi  Matrix.hi  Modular.dyn_hi  Modular.hi  Numeric.dyn_hi  Numeric.hi  Random.dyn_hi  Random.hi  ST.dyn_hi  ST.hi  Sparse.dyn_hi  Sparse.hi  Static.dyn_hi  Static.hi  Util.dyn_hi  Util.hi  Vector.dyn_hi  Vector.hi  (+2 more)
.stack-work/install/x86_64-osx/lts-6.7/7.10.3/lib/x86_64-osx-ghc-7.10.3/hmatrix-0.18.0.0-7PZ22o8olec0bnj98RI2Zu/Numeric/: LinearAlgebra.dyn_hi  LinearAlgebra.hi  Matrix.dyn_hi  Matrix.hi  Vector.dyn_hi  Vector.hi
.stack-work/install/x86_64-osx/lts-6.7/7.10.3/lib/x86_64-osx-ghc-7.10.3/hmatrix-0.18.0.0-7PZ22o8olec0bnj98RI2Zu/Numeric/LinearAlgebra/: Data.dyn_hi  Data.hi  Devel.dyn_hi  Devel.hi  HMatrix.dyn_hi  HMatrix.hi  Static.dyn_hi  Static.hi
.stack-work/install/x86_64-osx/lts-6.7/7.10.3/pkgdb/: hmatrix-0.18.0.0-1d8fa7590dc64d386197097d7b3b924f.conf  package.cache
app/: Main.hi  Main.hs
examples/: 424encoder.hs  naivebayes-doc-classifier.hs  naivebayes-sentiment-analysis.hs  notmnist.hs  recurrent.hs  reddit.csv  sentiment-analysis-data  sin.hs  stopwords  word2vec.hs  xor.hs
profiling/: run  setup
src/: Lib.hi  Lib.hs  Sibe.hs
src/Numeric/: Sibe.hs
src/Numeric/Sibe/: NLP.hs  NaiveBayes.hs  Recurrent.hs  Utils.hs  Word2Vec.hs
src/Sibe/: NLP.hs  NaiveBayes.hs  Utils.hs  Word2Vec.hs  Word2Vec.hs.backup
test/: Spec.hs
