name:                sibe
version:             0.2.0.0
synopsis:            Machine Learning algorithms
description:         Haskell Machine Learning
homepage:            https://github.com/mdibaiee/sibe
license:             GPL-3
license-file:        LICENSE
author:              Mahdi Dibaiee
maintainer:          mdibaiee@aol.com
copyright:           2016 Mahdi Dibaiee
category:            Web, Machine Learning, Data Science
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Numeric.Sibe, Numeric.Sibe.NaiveBayes, Numeric.Sibe.NLP, Numeric.Sibe.Word2Vec, Numeric.Sibe.Utils
  build-depends:       base >= 4.7 && < 5
                     , hmatrix
                     , random
                     , deepseq
                     , containers
                     , split
                     , regex-base
                     , regex-pcre
                     , text
                     , stemmer
                     , vector
                     , random-shuffle
                     , data-default-class
                     , Chart
                     , Chart-cairo
                     , lens
  default-language:    Haskell2010

executable example-xor
  hs-source-dirs:      examples
  main-is:             xor.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sibe
                     , hmatrix
                     , data-default-class
  default-language:    Haskell2010

executable example-word2vec
  hs-source-dirs:      examples
  main-is:             word2vec.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sibe
                     , hmatrix
                     , data-default-class
                     , split
                     , vector
                     , directory
                     , random
  default-language:    Haskell2010

executable example-424
  hs-source-dirs:      examples
  main-is:             424encoder.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sibe
                     , hmatrix
                     , data-default-class
  default-language:    Haskell2010

executable example-notmnist
  hs-source-dirs:      examples
  main-is:             notmnist.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sibe
                     , hmatrix
                     , directory >= 1.2.5.0
                     , JuicyPixels == 3.2.7.2
                     , vector == 0.11.0.0
                     , random
                     , random-shuffle
                     , data-default-class
                     , Chart
                     , Chart-cairo
  default-language:    Haskell2010

executable example-naivebayes-doc-classifier
  hs-source-dirs:      examples
  main-is:             naivebayes-doc-classifier.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sibe
                     , hmatrix
                     , containers
                     , split
  default-language:    Haskell2010

test-suite sibe-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sibe
                     , hmatrix
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mdibaiee/sibe
